# bs-thesis

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.modules/python/: setup.py
.modules/superset/app/: superset_config.py
_modules/bs-infrastructure/: README.md  setup.py
_modules/clickhouse/: docker-entrypoint-initdb.sql
_modules/postgres/: docker-entrypoint-initdb.sql
_modules/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841
_modules/postgres/base/16384/: 1247  1247_fsm  1249  1249_fsm  1249_vm  1259  1259_fsm  16385  16386  16389  16391  16393  16394  16397  16399  16401  16402  16405  16407  16409  16410  16414  16415  16417  16419  16431  16437  16439  16441  16442  16445  16447  16459  16460  16463  16465  16477  16478  16481  16483  (+238 more)
_modules/postgres/base/4/: 2619
_modules/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
_modules/postgres/pg_multixact/members/: 0000
_modules/postgres/pg_multixact/offsets/: 0000
_modules/postgres/pg_stat/: pgstat.stat
_modules/postgres/pg_xact/: 0000
_modules/python/: README.md  setup.py
_modules/python/python/trader/: __init__.py
_modules/python/python/w3api/: router.py
_modules/superset/: Dockerfile
core/balancer/contracts/: Vault.py  WeightedPool2Tokens.py  vaults.py
core/convex/contracts/: BaseRewardPool.py  VirtualBalanceRewardPool.py
core/curve/contracts/: Gauge.py  Pool.py  pools.py
core/ellipsis/contracts/: LPToken.py  Pool.py  pools.py  tokens.py
core/protocols/balancer/contracts/: WeightedPool2Tokens.py
core/protocols/convex/contracts/: VirtualBalanceRewardPool.py
core/protocols/curve/contracts/: LPToken.py
core/protocols/ellipsis/contracts/: LPToken.py  Pool.py
core/protocols/sushiswap/contracts/: UniswapV2Pair.py
core/sushiswap/contracts/: UniswapV2Pair.py
core/uniswap/contracts/: UniswapV2Pair.py  stakings.py
d3tl/abstract/: fabric.py
d3tl/bridge/: configurator.py
d3tl/consts/chains/: consts.py
d3tl/fabrics/bids_and_asks/: fabric.py
d3tl/fabrics/hedge_to_borrow/: fabric.py
d3tl/fabrics/hedge_to_borrows/: fabric.py
d3tl/fabrics/hedge_to_supplies/: fabric.py
d3tl/fabrics/hedge_to_supply/: fabric.py
d3tl/fabrics/wallet_balance/: fabric.py
d3tl/fabrics/wallet_balances/: fabric.py
d3tl/handlers/bids_and_asks/equalizer/: handlers.py
d3tl/handlers/bids_and_asks/kyberswap/: handlers.py
d3tl/handlers/bids_and_asks/quickswap/: handlers.py
d3tl/handlers/bids_and_asks/spookyswap/: handlers.py
d3tl/handlers/bids_and_asks/uniswap/: handlers.py
d3tl/handlers/bids_and_asks/velodrome/: handlers.py
d3tl/handlers/hedge_to_borrow/aave/: handlers.py
d3tl/handlers/hedge_to_borrows/aave/: handlers.py
d3tl/handlers/hedge_to_supplies/aave/: handlers.py
d3tl/handlers/hedge_to_supply/aave/: handlers.py
d3tl/handlers/wallet_balance/erc20/: handlers.py
d3tl/handlers/wallet_balance/erc_20/: handlers.py
d3tl/handlers/wallet_balance/gas/: handlers.py
d3tl/handlers/wallet_balances/erc20/: handlers.py
d3tl/handlers/wallet_balances/gas/: handlers.py
d3tl/interfaces/fabric/: interface.py
d3tl/interfaces/handlers/bids_and_asks/: interface.py
d3tl/interfaces/handlers/hedge_to_borrow/: interface.py
d3tl/interfaces/handlers/hedge_to_borrows/: interface.py
d3tl/interfaces/handlers/hedge_to_supplies/: interface.py
d3tl/interfaces/handlers/hedge_to_supply/: interface.py
d3tl/interfaces/handlers/wallet_balance/: interface.py
d3tl/interfaces/handlers/wallet_balances/: interface.py
d3tl/typings/fabric/: typing.py
d3tl/typings/handlers/bids_and_asks/: typing.py
d3tl/typings/handlers/hedge_to_borrow/: typing.py
d3tl/typings/handlers/hedge_to_borrows/: typing.py
d3tl/typings/handlers/hedge_to_supplies/: typing.py
d3tl/typings/handlers/hedge_to_supply/: typing.py
d3tl/typings/handlers/wallet_balance/: typing.py
d3tl/typings/handlers/wallet_balances/: typing.py
defi/protocols/aave/contracts/: IncentivesController.py  LendingPool.py
defi/protocols/aave/tokens/: AToken.py  VariableDebtToken.py
defi/protocols/balancer/contracts/: Vault.py  WeightedPool2Tokens.py
defi/protocols/convex/contracts/: BaseRewardPool.py  VirtualBalanceRewardPool.py
defi/protocols/convex/tokens/: ConvexToken.py  DepositToken.py
defi/protocols/curve/contracts/: Gauge.py  LiquidityGauge.py  Pool.py
defi/protocols/curve/tokens/: LPToken.py
defi/tokens/contracts/: ERC20Token.py
fastapi/quickswap-v3-ms/: Dockerfile  requirements.txt
fastapi/quickswap-v3-ms/app/: __main__.py
fastapi/uniswap-v3-ms/: Dockerfile  requirements.txt
fastapi/uniswap-v3-ms/app/: __main__.py
interfaces/: contracts.py  tokens.py
protocols/curve/contracts/: pools.py  tokens.py
protocols/ellipsis/contracts/: tokens.py
protocols/uniswap/contracts/: pools.py  staking.py
providers/: configuration.py
src/: SBER4H.csv  __main__.py
src/adapters/clients/: agent.py  environment.py
src/adapters/repositories/: ohlc.py
src/models/: qnn.py
src/schemas/: action_space.py  indicators.py  ohlc.py  position_type.py  step_observation.py  trade.py
src/services/: atr.py  bb.py  ema.py  log.py  rsi.py
src/services/common/: indicator_base.py  ohlc_base.py
tests/aave/: tests.py
tests/bids_and_asks/equalizer/: tests.py
tests/bids_and_asks/kyberswap/: tests.py
tests/bids_and_asks/quickswap/: tests.py
tests/bids_and_asks/spookyswap/: tests.py
tests/bids_and_asks/uniswap/: tests.py
tests/bids_and_asks/velodrome/: tests.py
tests/convex/: tests.py
tests/curve/: tests.py
tests/ellipsis/: tests.py
tests/geist/: tests.py
tests/hedge_to_borrow/aave/: tests.py
tests/hedge_to_borrows/aave/: tests.py
tests/hedge_to_supplies/aave/: tests.py
tests/hedge_to_supply/aave/: tests.py
tests/kyberswap/: tests.py
tests/nereus/: tests.py
tests/pancakeswap/: tests.py
tests/sturdy/: tests.py
tests/sushiswap/: tests.py
tests/uniswap/: tests.py
tests/wallet_balance/erc20/: tests.py
tests/wallet_balance/gas/: tests.py
tests/wallet_balances/erc20/: tests.py
tests/wallet_balances/gas/: tests.py
(+57 files in other folders)
